@@ -282,6 +282,7 @@ key ctrl+alt+d f   select_block /^Index: /, /^(Index: |$)/, false
 # Select a diff hunk in a patch
 key ctrl+alt+d h   select_block /^@@ /, /^(@@ |$)/, false
 key esc #          comment_out
+key esc @          uncomment
 
 key ctrl+alt+v;showClips
 key ctrl+v;paste
