@@ -10,6 +10,7 @@ Diakonos Changelog
 - User-definable status line variables added.
 - :after_open and :after_buffer_switch hooks added.
 - Sample script for git branch status variable added.
+- comment_out and uncomment functions added; comment_string setting added.
 
 0.8.5
 
